feat: mejorar gestión de asientos y perfil de usuario en aplicación móvil y backend
- **Backend**: Implementa sincronización de asientos vendidos consultando el repositorio de ventas al obtener asientos de un evento.
- **Backend**: Corrige validación de cupo para manejar eventos con capacidad ilimitada (null).
- **Messaging**: Incluye `sessionId` y `compradorEmail` en el evento de Kafka de ventas confirmadas.
- **Proxy**: Envía el `sessionId` a la cátedra durante el proceso de compra si está disponible.
- **Mobile**: Añade pantalla de "Mi Perfil" con información del usuario y cierre de sesión.
- **Mobile**: Actualiza la visualización de asientos para mostrar fila y columna, y maneja cupo ilimitado en el detalle del evento.
- **Mobile**: Refactoriza `EventDetailViewModel` para utilizar `externalId` en la carga de asientos.